--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@supabase/supabase-js": "^2.47.8",
+    "base64-arraybuffer": "^1.0.2",
+    "buffer": "^6.0.3",
     "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-image": "^2.0.3",
+    "expo-image-picker": "^16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "4.0.11",
     "expo-splash-screen": "~0.29.18",
