--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
     "expo": "~52.0.18",
+    "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -42,12 +43,13 @@
     "react-native": "0.76.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
