--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "install": "^0.13.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -45,6 +46,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
